package eapli.base.productmanagement.dto;


/**
 * DTO for products.
 *
 * @author Rita Ariana Sobral
 *
 */
public class ProductDTO {

    private String productUniqueInternalCode;

    private String productShortDescription;

    private double price;
}
